# wfdb_wrapper

./: CMakeLists.txt  _mylibrary_EXPORTS.h  call_cpp_shared_lib.jl  cphysiofile.cpp  cphysiofile.h  def.h  main.cpp  mylibrary.cpp  mylibrary.h  read_ann.cpp  read_header.cpp  read_samples.cpp  shared_EXPORTS.h
.github/workflows/: build.yml  cmake.yml  dev-build.yml
data/: I22.atr  I22.hea
old/: cphysiofile.cpp
old/old_wrapper/: PhysionetAnnotationFile.h  createPhysionetHeader.cpp
old_wrapper/: Export.cpp  Exports.cpp  FilePhysionet.cpp  Implementation.cpp  PhysionetAnnotationFile.cpp  createPhysionetHeader.h
wfdblib/: annot.c  calib.c  signal.c  sortann.c  wfdb.h  wfdbio.c  wfdblib.h
